scripts/nullaway/annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8.txt
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/ll/LL.java:153: error: [NullAway] dereferenced expression collection.get(notEndChar) is @Nullable
		return collection.get(notEndChar).get(endChar);
		                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:42: error: [NullAway] initializer method does not guarantee @NonNull field startNewNode (line 37) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ToDFA(Hashtable<Integer,Node> nodeList,TreeSet<String> input){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:60: error: [NullAway] dereferenced expression nodeList.get(1) is @Nullable
		nodes.add(nodeList.get(1).getValue());
		                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:137: error: [NullAway] enhanced-for expression dtrans.get(key) is @Nullable
			for(Dtran d:dtrans.get(key)){
			                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:181: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
			for(Dtran d:dtrans.get(v)){
			                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:201: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
			for(Dtran d:dtrans.get(v)){
			                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:224: error: [NullAway] dereferenced expression nodeList.get(i) is @Nullable
			TreeSet<Integer> n_1=nodeList.get(i).getNodeMove("");
			                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:244: error: [NullAway] dereferenced expression nodeList.get(n) is @Nullable
			node.addAll(nodeList.get(n).getNodeMove(tran));
			                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Node.java:52: error: [NullAway] enhanced-for expression enableReachValues.get(i) is @Nullable
			for(String str:enableReachValues.get(i)){
			                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:23: error: [NullAway] dereferenced expression dr is @Nullable
			while((str_=dr.readLine())!=null){
			              ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:41: error: [NullAway] dereferenced expression dr is @Nullable
				dr.close();
				  ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:61: error: [NullAway] dereferenced expression dr is @Nullable
			while((str_=dr.readLine())!=null){
			              ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:69: error: [NullAway] dereferenced expression dr is @Nullable
				dr.close();
				  ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields lastNode (line 19), chList (line 23), tran (line 25) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Match(String str){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:100: error: [NullAway] enhanced-for expression ds is @Nullable
		for(Dtran d:ds){
		            ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:59: error: [NullAway] dereferenced expression group.get(i) is @Nullable
		return group.get(i).getString(matchString);
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:112: error: [NullAway] dereferenced expression str is @Nullable
				return str.substring(startIndex, endIndex);
				          ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/K.java:72: error: [NullAway] dereferenced expression nodeList.get(v) is @Nullable
			Enumeration<Integer> keys = nodeList.get(v).getEnableReachValues().keys();
			                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:202: error: [NullAway] dereferenced expression unit.getFather() is @Nullable
			h(unit.getEnd(),unit.getFather().getEnd());
			                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:214: error: [NullAway] dereferenced expression nodeList.get(a) is @Nullable
		nodeList.get(a).addEnableReachValue(b, ch);
		               ^
    (see http://t.uber.com/nullaway )
../annotator/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:251: error: [NullAway] enhanced-for expression td.getDtrans().get(v) is @Nullable
			for(Dtran d:td.getDtrans().get(v)){
			                              ^
    (see http://t.uber.com/nullaway )
21 errors
